# updapips

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py
src/updapips/: cli.py  updapips.py  upgrade_pip_pkgs.py
